# bp_meassure

./: .gitignore  README.md  analysis_options.yaml  firebase.json  pr.md  pubspec.yaml
android/app/: build.gradle.kts
backend/: pyproject.toml
backend/app/: config.py  logging_config.py  main.py
backend/app/middleware/: firebase_auth.py  request_id.py
backend/app/models/: ai.py
backend/app/routers/: ai.py  meta.py
backend/app/services/: ai_service.py  prompt_builder.py  safety.py
backend/bp_monitor_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_endpoints.py  test_prompt_builder.py  test_safety.py
bp_meassure/: README.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/: constants.dart  errors.dart  logger.dart  widgets.dart
lib/data/: database.dart  database.g.dart  database_provider.dart
lib/infra/: auth_service.dart  connectivity_service.dart
lib/l10n/: app_en.arb  app_he.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_he.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: GoogleService-Info.plist
macos/Runner.xcodeproj/: project.pbxproj
test/: analytics_service_test.dart  auth_service_test.dart  dao_test.dart  safety_service_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
(+81 files in other folders)
